feat(support): Implement endpoint to fetch all support namespaces
