# src/modules/api/swagger.json
@@ -1109,6 +1109,36 @@
                 }
             }
         },
+        "/support/namespace": {
+            "get": {
+                "tags": [
+                    "Support 💬"
+                ],
+                "summary": "get namespaces",
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get namespaces successFully"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    },
+                    "403": {
+                        "description": "access denied"
+                    },
+                    "404": {
+                        "description": "user not found"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
         "/support/namespace/create": {
             "post": {
                 "tags": [
