# src/modules/support/support.routes.ts
@@ -3,6 +3,7 @@ import { nameSpaceController } from "./namespace.controller";
 
 const supportRouter:Router = Router();
 
+supportRouter.get(`/namespace`, nameSpaceController.getNamespaces);
 supportRouter.post(`/namespace/create`, nameSpaceController.createNamespace);
 
 export default supportRouter;
